--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -31,13 +31,13 @@
                 </div>
               </div>-->
               <div class="col-12">
-                <textarea class="form-control" id="aboutProject" name="message" rows="6" placeholder="Inquiry Details" required></textarea>
+                <textarea class="form-control" id="aboutProject" name="message" rows="6" placeholder="Details" required></textarea>
               </div>
               <div class="col-12">
                 <button type="submit" class="btn btn-primary" id="contact-form-button">
                   <span class="btn-area">
-                    <span data-text="Send Message">
-                      Send Message
+                    <span data-text="Send">
+                      Send
                     </span>
                   </span>
                 </button>
