--- a/layouts/partials/call-to-action.html
+++ b/layouts/partials/call-to-action.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-12 text-center">
           <h1 class="site-cta-title">{{ .title }}</h1>
-          <p style="margin-bottom: 8ex;">We are looking for new members. Please contact us if you are interested.</p>
+          <p style="margin-bottom: 8ex;">We are looking for new members. Feel free to contact us.</p>
           <ul class="site-cta-buttons">
             <li>
               <a href="{{ .primary_button_url | absURL }}" class="btn btn-secondary">
