--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -9,19 +9,22 @@
       </div>
       <div class="col-lg-6 ml-auto">
         <div class="site-contact-form">
-          <h4>{{ .Params.form_heading }}</h4>
-          <form id="contact-form" netlify>
+          <h4 class="contact">{{ .Params.form_mail }}</h4>
+          <a class="contact" href="mailto:info@studio-mizutama.net"><i class="fa fa-envelope"></i> info@studio-mizutama.net</a>
+          <h4 class="contact">{{ .Params.form_twitter }}</h4>
+          <a class="contact" href="https://twitter.com/MinoriMizutama" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i> @MinoriMizutama</a>
+          <!--<form id="contact-form" netlify>
             <div class="row">
-              <!--<div class="col-lg-6">
+              <div class="col-lg-6">
                 <input type="text" class="form-control" name="first-name" id="first-name" placeholder="First Name">
-              </div>-->
+              </div>
               <div class="col-lg-6">
                 <input type="text" class="form-control" name="name" id="name" placeholder="Name" required>
               </div>
               <div class="col-lg-6">
                 <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
               </div>
-              <!--<div class="col-lg-6">
+              <div class="col-lg-6">
                 <div class="select-wrapper">
                   <select class="form-control" id="projectType" name="project-type">
                     <option value="" selected disabled hidden>Project Type</option>
@@ -29,7 +32,7 @@
                     <option value="wb">Web Design</option>
                   </select>
                 </div>
-              </div>-->
+              </div>
               <div class="col-12">
                 <textarea class="form-control" id="aboutProject" name="message" rows="6" placeholder="Details" required></textarea>
               </div>
@@ -44,7 +47,7 @@
               </div>
               <p id="contact-form-status"></p>
             </div>
-          </form>
+          </form>-->
         </div>
       </div>
     </div>
