--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -21,3 +21,9 @@
   margin-left: 30px;
   margin-right: 0;
 }
+.contact {
+  text-decoration: none;
+  display: block;
+  color: #04113B;
+  margin: 0 auto 40px auto;
+}
