--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,9 +34,7 @@
           </li>
           {{ else }}
           <li class="nav-item">
-            <a class="nav-link" href="{{ .URL | absURL }}"
-              >{{ .Name }}</a
-            >
+            <a class="nav-link" href="{{ .URL | absURL }}">{{ .Name }}</a>
           </li>
           {{ end }} 
         {{ end }}
