add news to top page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,8 @@
 
 {{ partial "portfolio.html" . }}
 
+{{ partial "news.html" . }}
+
 {{ partial "testimonial.html" . }}
 
 {{ partial "call-to-action.html" . }}
