--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -21,3 +21,12 @@
   margin-left: 30px;
   margin-right: 0;
 }
+.contact {
+  text-decoration: none;
+  display: block;
+  color: #04113B;
+  margin: 0 auto 40px auto;
+}
+.language {
+  color: #04113B;
+}
