--- a/layouts/works/single.html
+++ b/layouts/works/single.html
@@ -21,7 +21,7 @@
             <img src="{{ . | absURL }}" alt="project image">
             {{ end }}
           </div>
-          {{ if .NextInSection }}
+          <!--{{ if .NextInSection }}
           <div class="site-project-single-action">
             <a href="{{.NextInSection.Permalink}}">
               <span class="link-area">
@@ -29,10 +29,10 @@
                   Next Project
                 </span>
               </span>
-              <img src="{{ "images/to-top.svg" | absURL }}" alt="next project">
+              <img src="{{ " images/to-top.svg" | absURL }}" alt="next project">
             </a>
           </div>
-          {{ end }}
+          {{ end }}-->
         </div>
       </div>
     </div>
