--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -31,7 +31,21 @@
   color: #04113B;
 }
 
-iframe {
+.frame {
+  position: relative;
   width: 100%;
-  margin: 0 auto;
+}
+
+.frame:before {
+    content:"";
+    display: block;
+    padding-top: 56.25%;
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
