--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -12,7 +12,7 @@
           <h4 class="contact">{{ .Params.form_mail }}</h4>
           <a class="contact" href="mailto:info@studio-mizutama.net"><i class="fa fa-envelope"></i> info@studio-mizutama.net</a>
           <h4 class="contact">{{ .Params.form_twitter }}</h4>
-          <a class="contact" href="https://twitter.com/MinoriMizutama" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i> @MinoriMizutama</a>
+          <a class="contact" href="https://twitter.com/Studio_Mizutama" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i> @Studio_Mizutama</a>
           <!--<form id="contact-form" netlify>
             <div class="row">
               <div class="col-lg-6">
