--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -41,6 +41,11 @@
     </div>
   </div>
 </section>
+<div class="col-lg-8 mx-auto">
+  <div class="site-project-single-description" style="margin-top: 24px">
+    {{ .Content }}
+  </div>
+</div>
 
 {{ partial "clients.html" . }}
 
