--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -50,6 +50,9 @@
           </form>-->
         </div>
       </div>
+      <div>
+        {{ .Content}}
+      </div>
     </div>
   </div>
 </section>
