--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -14,13 +14,14 @@
         <div class="col-lg-4 col-md-6">
           <div class="site-team-member">
             <div class="site-team-member-image">
-              <img src="{{ .image | absURL }}" alt="team-member" width="100">
+              <a href="/about/{{ .url }}" rel="noopener noreferrer"><img src="{{ .image | absURL }}" alt="team-member" width="100"></a>
             </div>
             <div class="site-team-member-content">
               <h3>{{ .name }}</h3>
               <p>{{ .designation }}</p>
               <ul class="site-team-member-social">
                 <li><a href="{{ .github | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a></li>
+                <li><a href="{{ .qiita | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-search"></i></a></li>
                 <li><a href="{{ .twitter | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i></a></li>
                 <!--<li><a href="{{ .instagram | absURL }}"><i class="fa fa-instagram"></i></a></li>-->
               </ul>
