--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,9 +9,9 @@
         <div class="site-footer-widget">
           <h5 class="site-footer-widget-title">{{ .title }}</h5>
           <p class="site-footer-widget-description">
-            <!--{{ .address | safeHTML }}
+            {{ .address | safeHTML }}
             <br>
-            <a href="tel:{{ .phone }}">{{ .phone }}</a>
+            <!--<a href="tel:{{ .phone }}">{{ .phone }}</a>
             <br>-->
             <a href="mailto:{{ .email }}">{{ .email }}</a>
           </p>
