--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -50,7 +50,7 @@
           </form>-->
         </div>
       </div>
-      <div>
+      <div class="col-lg-11">
         {{ .Content}}
       </div>
     </div>
