--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -15,6 +15,28 @@
           <!--<img class="feature-image" src="{{ .Params.feature_image | absURL }}" alt="blog-feature-image">-->
           {{ .Content }}
         </article>
+        <div class="site-project-single-action" style="display: flex; margin-top: 32px;">
+          {{ if .PrevInSection }}
+          <a href="{{.PrevInSection.Permalink}}" style="justify-content: flex-start; margin-left: 0;">
+            <img src="/images/to-top.svg" alt="prev news" style="transform: rotate(270deg); margin: auto 30px auto 0;">
+            <span class="link-area">
+              <span data-text="Prev News">
+                Prev News
+              </span>
+            </span>
+          </a>
+          {{ end }}
+          {{ if .NextInSection }}
+          <a href="{{.NextInSection.Permalink}}">
+            <span class="link-area">
+              <span data-text="Next News">
+                Next News
+              </span>
+            </span>
+            <img src="/images/to-top.svg" alt="next news">
+          </a>
+          {{ end }}
+        </div>
       </div>
     </div>
   </div>
