--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -21,7 +21,7 @@
               <ul class="site-team-member-social">
                 <li><a href="{{ .Params.github | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a></li>
                 <li><a href="{{ .Params.qiita | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-search"></i></a></li>
-                <li><a href="{{ .Params.twitter | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i></a></li>
+                <!--<li><a href="{{ .Params.twitter | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i></a></li>-->
               </ul>
             </div>
           </div>
