--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -22,8 +22,8 @@
               <ul class="site-team-member-social">
                 <li><a href="{{ .github | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a></li>
                 <li><a href="{{ .qiita | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-search"></i></a></li>
-                <li><a href="{{ .twitter | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i></a></li>
-                <!--<li><a href="{{ .instagram | absURL }}"><i class="fa fa-instagram"></i></a></li>-->
+                <!--<li><a href="{{ .twitter | absURL }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="{{ .instagram | absURL }}"><i class="fa fa-instagram"></i></a></li>-->
               </ul>
             </div>
           </div>
