--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,6 +31,9 @@
   {{ with .Params.description }}
   <meta property="og:description"         content="{{ . }}">
   <meta property="twitter:description"    content="{{ . }}">
+  {{ else}}
+  <meta property="og:description"         content="{{ .Description }}">
+  <meta property="twitter:description"    content="{{ .Description }}">
   {{ end }}
   <meta property="og:image"       content="{{ .Site.Params.og_image | absURL }}">
   <meta property="og:image:url"   content="{{ .Site.Params.og_image | absURL }}">
