--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -32,8 +32,8 @@
   <meta property="og:description"         content="{{ . }}">
   <meta property="twitter:description"    content="{{ . }}">
   {{ else}}
-  <meta property="og:description"         content="{{ .Description }}">
-  <meta property="twitter:description"    content="{{ .Description }}">
+  <meta property="og:description"         content="Studio Mizutama produces animation and other video works, applications for video production, and web media. Our goal is to contribute to the promotion of the digital media production field by publishing the results and the technical knowledge gained through the production. We publish them on GitHub and Qiita.">
+  <meta property="twitter:description"    content="Studio Mizutama produces animation and other video works, applications for video production, and web media. Our goal is to contribute to the promotion of the digital media production field by publishing the results and the technical knowledge gained through the production. We publish them on GitHub and Qiita.">
   {{ end }}
   <meta property="og:image"       content="{{ .Site.Params.og_image | absURL }}">
   <meta property="og:image:url"   content="{{ .Site.Params.og_image | absURL }}">
